正在有条不紊的开发者

--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,24 @@
 <html lang="en" ng-app="Knowledge">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Knowledge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="app.css">
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular-route/angular-route.js"></script>
-  <script src="app.module.js"></script>
-  <script src="app.config.js"></script>
-  <script src="View/LoginPage/login.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Knowledge</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="app.css">
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-route/angular-route.js"></script>
+    <script src="app.module.js"></script>
+    <script src="app.config.js"></script>
+    <script src="app.service.js"></script>
+    <script src="View/LoginPage/login.js"></script>
+    <script src="View/MainPage/main.js"></script>
+    <script src="View/Component/QuestionCard/QuestionCard.js"></script>
 </head>
 
 <body>
 
-  <div ng-view></div>
+<div ng-view></div>
 
 </body>
 
